[Add]create,index,update,destroy機能の作成

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
   <strong>Books</strong>
 </h1>
 
-<%=@books.each do |list| %>
+<% @books.each do |book| %>
 
 <div class="index">
   <table>
@@ -15,15 +15,16 @@
 
     <tbody>
       <tr>
-        <th><%=f.text_field:title %></th>
-        <th><%=f.text_field:body %></th>
-        <th><%=link_to"Show",'/books/show'%></th>
-        <th><%=link_to"Edit",'/books/edit'%></th>
-        <!--destroyの移動は後からやる-->
-        <th><%=link_to"Destroy",'/books/show'%></th>
+        <td><%=book.title %></td>
+        <td><%=book.body %></td>
+        <td><%=link_to"Show",book_path(book.id)%></td>
+        <td><%=link_to"Edit",edit_book_path(book.id)%></td>
+        <td><%=link_to"Destroy",destroy_book_path(book.id),method: :delete,"data-confirm" =>"Are you sure?"%></td>
       </tr>
     </tbody>
  </table>
 
 </div>
+
+<% end %>
 
