--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+
+<h3>Title:</h3>
+<p><%= @book.title %></p>
+
+<h3>Body</h3>
+<p><%= @book.body %></p>
+
+<%= link_to"Edit",edit_book_path(@book.id)%>
