[Add]リンクの作成

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -2,6 +2,15 @@
  <strong>New book</strong>
 </h1>
 
+<% if @list.errors.any? %>
+ <%=@list.errors.count %>件のエラーが発生しました
+ <ul>
+   <% @list.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+   <% end %>
+ </ul>
+<% end %>
+
 <%= form_with model: @book do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
