--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,11 +1,13 @@
+
+
 <h1>
  <strong>New book</strong>
 </h1>
 
-<% if @list.errors.any? %>
- <%=@list.errors.count %>件のエラーが発生しました
+<% if @book.errors.any? %>
+ <%=@book.errors.count %> errors prohibited this book from being saved:
  <ul>
-   <% @list.errors.full_messages.each do |message| %>
+   <% @book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
    <% end %>
  </ul>
