--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,19 @@
 
-<h3>Title:</h3>
-<p><%= @book.title %></p>
+<div>
+  <%= flash[:notice] %>
+</div>
 
-<h3>Body</h3>
-<p><%= @book.body %></p>
+
+<div class="title-box">
+  <h3>Title: </h3>
+  <p><%= @book.title %></p>
+</div>
+
+<div class="body-box">
+  <h3>Body: </h3>
+  <p><%= @book.body %></p>
+</div>
 
 <%= link_to"Edit",edit_book_path(@book.id)%>
+|
 <%= link_to"Back",'/books'%>
