--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,15 @@
  <strong>Editing Book</strong>
 </h1>
 
+<% if @book.errors.any? %>
+ <%=@book.errors.count %> errors prohibited this book from being saved:
+ <ul>
+   <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+   <% end %>
+ </ul>
+<% end %>
+
 <%= form_with model: @book do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
@@ -14,4 +23,5 @@
  <%end%>
 
  <%= link_to"Show",book_path(@book.id)%>
+ |
  <%= link_to"Back",'/books'%>
