--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,10 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <h1>
   <strong>Books</strong>
 </h1>
-
-<% @books.each do |book| %>
 
 <div class="index">
   <table>
@@ -14,17 +16,42 @@
     </thead>
 
     <tbody>
+      <% @books.each do |book| %>
       <tr>
         <td><%=book.title %></td>
         <td><%=book.body %></td>
         <td><%=link_to"Show",book_path(book.id)%></td>
         <td><%=link_to"Edit",edit_book_path(book.id)%></td>
-        <td><%=link_to"Destroy",destroy_book_path(book.id),method: :delete,"data-confirm" =>"Are you sure?"%></td>
+        <td><%=link_to"Destroy",book_path(book.id),method: :delete,"data-confirm" =>"Are you sure?"%></td>
       </tr>
+      <% end %>
     </tbody>
  </table>
 
 </div>
 
+
+<h1>
+ <strong>New book</strong>
+</h1>
+
+<% if @book.errors.any? %>
+ <%=@book.errors.count %> errors prohibited this book from being saved:
+ <ul>
+   <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+   <% end %>
+ </ul>
 <% end %>
+
+<%= form_with model: @book do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Create Book' %>
+
+ <%end%>
 
