--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 
-<h1>ようこそ 
+<h1>ようこそ
  <strong>Bookersへ！</strong>
 </h1>
 
@@ -10,4 +10,4 @@
 
 <p>印象を共有し交換することができます</p>
 
-<%=link_to"start",'/books/index'%>
+<%=link_to"start",'/books'%>
